# gi-gh-container-cleaner

./: Cargo.toml  LICENSE
.fso-amem/: project.toml
schemes/: org_list_package_versions.json  org_list_packages.json
src/: github_package_versions.rs  github_packages.rs  main.rs
