[package]
name = "gi-gh-container-cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
license = "MIT"
repository = "https://github.com/gemtek-indonesia/gi-gh-container-cleaner"
description = "Gemtek's Github dangling container cleaner"

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
log = { version = "0.4.17", features = [
    "max_level_debug",
    "release_max_level_info",
    "serde",
    "sval",
    "value-bag",
] }
reqwest = { version = "0.11.13", default-features = false, features = [
    "json",
    "native-tls",
    "tokio-native-tls",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
structopt = { version = "0.3.26", features = ["color"] }
tokio = { version = "1.24.1", features = ["full"] }
